force-app/main/default/objects/AI_Provider_Config__c/AI_Provider_Config__c.object-meta.xml
<CustomObject>
    <description>Configures AI/LLM providers for Tier 2/3 features. Supports BYOLLM.</description>
    <label>AI Provider Config</label>
    <nameField><label>AI Provider Config Name</label><type>Text</type></nameField>
    <pluralLabel>AI Provider Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>