force-app/main/default/objects/AI_Provider_Config__c/fields/Audit_Logging__c.field-meta.xml
<CustomField>
    <fullName>Audit_Logging__c</fullName>
    <label>Audit Logging</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>