force-app/main/default/objects/AI_Provider_Config__c/fields/Data_Residency__c.field-meta.xml
<CustomField>
    <fullName>Data_Residency__c</fullName>
    <label>Data Residency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>US</fullName><default>false</default><label>US</label></value>
            <value><fullName>EU</fullName><default>false</default><label>EU</label></value>
            <value><fullName>APAC</fullName><default>false</default><label>APAC</label></value>
            <value><fullName>Customer_Managed</fullName><default>false</default><label>Customer Managed</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>