force-app/main/default/objects/AI_Provider_Config__c/fields/Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_URL__c</fullName>
    <description>API endpoint URL for Azure/Self-Hosted providers</description>
    <label>Endpoint URL</label>
    <type>Url</type>
</CustomField>