force-app/main/default/objects/AI_Provider_Config__c/fields/Last_Tested_On__c.field-meta.xml
<CustomField>
    <fullName>Last_Tested_On__c</fullName>
    <label>Last Tested On</label>
    <type>DateTime</type>
</CustomField>