force-app/main/default/objects/AI_Provider_Config__c/fields/Max_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Max_Tokens__c</fullName>
    <label>Max Tokens</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>