force-app/main/default/objects/AI_Provider_Config__c/fields/Model_Id__c.field-meta.xml
<CustomField>
    <fullName>Model_Id__c</fullName>
    <label>Model Id</label>
    <type>Text</type>
    <length>100</length>
</CustomField>