force-app/main/default/objects/AI_Provider_Config__c/fields/Monthly_Cost_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Cost_Estimate__c</fullName>
    <label>Monthly Cost Estimate</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>