force-app/main/default/objects/AI_Provider_Config__c/fields/PII_Allowed__c.field-meta.xml
<CustomField>
    <fullName>PII_Allowed__c</fullName>
    <label>PII Allowed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>