force-app/main/default/objects/AI_Provider_Config__c/fields/Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Provider_Type__c</fullName>
    <label>Provider Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Anthropic_Claude</fullName><default>false</default><label>Anthropic Claude</label></value>
            <value><fullName>Azure_OpenAI</fullName><default>false</default><label>Azure OpenAI</label></value>
            <value><fullName>OpenAI_Direct</fullName><default>false</default><label>OpenAI Direct</label></value>
            <value><fullName>Salesforce_Einstein</fullName><default>false</default><label>Salesforce Einstein</label></value>
            <value><fullName>Google_Gemini</fullName><default>false</default><label>Google Gemini</label></value>
            <value><fullName>AWS_Bedrock</fullName><default>false</default><label>AWS Bedrock</label></value>
            <value><fullName>Self_Hosted</fullName><default>false</default><label>Self Hosted</label></value>
            <value><fullName>None</fullName><default>false</default><label>None</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>