force-app/main/default/objects/AI_Provider_Config__c/fields/Rate_Limit_RPM__c.field-meta.xml
<CustomField>
    <fullName>Rate_Limit_RPM__c</fullName>
    <label>Rate Limit RPM</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>