force-app/main/default/objects/AI_Provider_Config__c/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <label>Temperature</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>2</scale>
</CustomField>