force-app/main/default/objects/AI_Provider_Config__c/fields/Use_For_Dispute__c.field-meta.xml
<CustomField>
    <fullName>Use_For_Dispute__c</fullName>
    <label>Use For Dispute</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>